bugfix: reformat code to remove tabs from parts of the code
git-svn-id: https://svn.code.sf.net/p/autoplot/code/autoplot/trunk@21380 0c594bb0-8543-0410-a25e-d8ec440261db